--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "write-file-webpack-plugin": "3.4.2"
   },
   "dependencies": {
+    "sanitize-filename": "^1.6.1",
     "ytdl-core": "^0.18.7"
   }
 }
