--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "youtube-download-button",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Download YouTube videos using a button next to Subscribe one",
   "scripts": {
-    "build": "node utils/build.js",
-    "start": "node utils/webserver.js"
+    "build": "cross-env NODE_ENV=production node utils/build.js",
+    "start": "cross-env NODE_ENV=development node utils/webserver.js"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
@@ -20,6 +20,7 @@
     "write-file-webpack-plugin": "3.4.2"
   },
   "dependencies": {
+    "cross-env": "^5.1.3",
     "sanitize-filename": "^1.6.1",
     "ytdl-core": "^0.20.1"
   }
