--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.7",
   "description": "Download YouTube videos using a button next to Subscribe one",
   "scripts": {
-    "build": "cross-env NODE_ENV=production node utils/build.js",
+    "build": "cross-env NODE_ENV=production node utils/build.js && sed -i 's/([0,1],eval)(\"this\")/undefined/g' build/injected.bundle.js",
     "start": "cross-env NODE_ENV=development node utils/webserver.js"
   },
   "devDependencies": {
@@ -17,10 +17,10 @@
     "style-loader": "^0.13.0",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.3.0",
-    "write-file-webpack-plugin": "3.4.2"
+    "write-file-webpack-plugin": "3.4.2",
+    "cross-env": "^5.1.3"
   },
   "dependencies": {
-    "cross-env": "^5.1.3",
     "sanitize-filename": "^1.6.1",
     "ytdl-core": "^0.20.1"
   }
