--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,5 +25,5 @@
       "default_title": "Youtube Download Button"
   },
   "manifest_version": 2,
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "script-src 'self'; object-src 'self'"
 }
