--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
   "version": "0.1.9",
   "description": "Download YouTube videos using a button next to Subscribe one",
   "scripts": {
-    "build": "cross-env NODE_ENV=production node utils/build.js && sed -i 's/([0,1],eval)(\"this\")/undefined/g' build/injected.bundle.js",
-    "start": "cross-env NODE_ENV=development node utils/webserver.js"
+    "build": "cross-env NODE_ENV=production webpack && sed -i 's/([0,1],eval)(\"this\")/undefined/g' build/injected.bundle.js"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.2.0",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.11.2",
-    "fs-extra": "^0.30.0",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "2.24.1",
-    "style-loader": "^0.13.0",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "^3.1.11",
-    "write-file-webpack-plugin": "3.4.2"
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.4.1",
+    "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.1.2",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
-    "sanitize-filename": "^1.6.1",
-    "ytdl-core": "^0.29.7"
+    "sanitize-filename": "^1.6.3",
+    "ytdl-core": "^1.0.6"
   }
 }
