Fix undefined links The Cookie header sended by browsers is the cause of the undefined links. Suppress the header before making the request. A background script must be added for doing so, and it needs to be persistent for Chrome. NOTE: Chrome needs the "extraHeaders" modifier too, to be able to modify the Cookie header. The background script must be persistent too.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,8 +18,16 @@
   },
   "permissions": [
     "https://www.youtube.com/",
-    "http://www.youtube.com/"
+    "http://www.youtube.com/",
+    "webRequest",
+    "webRequestBlocking"
   ],
+  "background": {
+    "scripts": [
+      "background.bundle.js"
+    ],
+    "persistent": true
+  },
   "browser_action": {
       "default_icon": "48x48.png",
       "default_title": "Youtube Download Button"
